Data: Llama batch 26-02-26

--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "72b06351",
    "metadata": {},
    "outputs": [
@@ -1127,26 +1127,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "--- Classification Report ---\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 5. Evaluation & Interpretation\n",
-    "y_pred = clf.predict(X_test_vec)\n",
-    "print(\"\\n--- Classification Report ---\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "e1fecbe3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "--- Classification Report ---\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "  Failed (0)       0.89      1.00      0.94        40\n",
@@ -1160,6 +1141,9 @@
     }
    ],
    "source": [
+    "# 5. Evaluation & Interpretation\n",
+    "y_pred = clf.predict(X_test_vec)\n",
+    "print(\"\\n--- Classification Report ---\")\n",
     "print(classification_report(y_test, y_pred, target_names=['Failed (0)', 'Success (1)']))"
    ]
   },
